ProcessInterLanguageLinks, comments